Fix z-index issue and twitter button update

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -224,6 +224,7 @@ a:hover
     right: 0
     bottom: 0
     display: none
+    z-index: 105
 
 #zoomholder
     position: fixed
@@ -235,6 +236,7 @@ a:hover
     transform: translate(-50%, -50%)
     padding: 6px
     border-radius: 12px
+    z-index: 106
 
 .video
     width: 854px
